--- a/1-basic/dev/iss_transform.ipynb
+++ b/1-basic/dev/iss_transform.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c1af8fb0",
+   "id": "ca879a53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c173970e",
+   "id": "2e598db4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "cb45f9f0",
+   "id": "ae44a235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "98f64b89",
+   "id": "3e11b6eb",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "1c46994f",
+   "id": "1dccd46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "6d02125e",
+   "id": "588346b7",
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +201,24 @@
     "df = df[['timestamp','message','iss_longitude','iss_latitude']]\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "f2e4d005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/tmp/iss_loc.csv', index=False, mode='w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bb80687",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
