--- a/1-basic/dev/iss_transform.ipynb
+++ b/1-basic/dev/iss_transform.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "ca879a53",
+   "id": "2c27a8ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "2e598db4",
+   "id": "c8a110bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "ae44a235",
+   "id": "e739aa4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3e11b6eb",
+   "id": "e25faaa8",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "1dccd46c",
+   "id": "4d7bf4a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "588346b7",
+   "execution_count": 95,
+   "id": "55fe0ea5",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>timestamp</th>\n",
+       "      <th>date_time</th>\n",
        "      <th>message</th>\n",
        "      <th>iss_longitude</th>\n",
        "      <th>iss_latitude</th>\n",
@@ -186,26 +186,27 @@
        "</div>"
       ],
       "text/plain": [
-       "            timestamp  message iss_longitude iss_latitude\n",
+       "            date_time  message iss_longitude iss_latitude\n",
        "0 2023-03-12 18:30:14  success     -133.5447     -43.1773\n",
        "1 2023-03-12 18:29:32  success     -136.4576     -41.7136\n",
        "2 2023-03-12 18:29:53  success     -135.0539     -42.4384"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df[['timestamp','message','iss_longitude','iss_latitude']]\n",
+    "df = df.rename(columns={'timestamp':'date_time'})\n",
+    "df = df[['date_time','message','iss_longitude','iss_latitude']]\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "f2e4d005",
+   "execution_count": 96,
+   "id": "0605946e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,8 +215,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "id": "5fad2c5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date_time        datetime64[ns]\n",
+       "message                  object\n",
+       "iss_longitude            object\n",
+       "iss_latitude             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9bb80687",
+   "id": "06178058",
    "metadata": {},
    "outputs": [],
    "source": []
